app-in-apps/yaml/nginxreverseproxy/service-dns.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginxreverseproxy-service-loadbalanced
  labels:
    app: nginxreverseproxy
  namespace: nginxreverseproxy
spec:
  selector:
    app: nginxreverseproxy
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
  type: LoadBalancer
