app-in-apps/yaml/nginxreverseproxy/service-ui.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginxreverseproxy-service-ingress
  labels:
    app: nginxreverseproxy
  namespace: nginxreverseproxy
spec:
  selector:
    app: nginxreverseproxy
  ports:
    - name: adminpanel
      port: 81
      protocol: TCP
      targetPort: 81
  type: ClusterIP
